# cmake_test

./: .gitignore  CMakeLists.txt  README.md  cmake_test.cpp  irrklang.cmake  irrlicht.cmake
cmake/: CMakeCache.txt
